arreglado el search, puse una vista para la gente comun de todos los productos y para los admins otra, agregue info en el md del sprint 3, cambio y fuera, facu.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,10 +4,14 @@
   
 
       <div class="container">
-          <p class="pull-left copyright"> Copyright © WASSER 2020. Todos los derechos reservados.<a href="#"> Sobre Nosotros </a></li></p>
+          <p class="pull-left copyright"> Copyright © WASSER 2020. Todos los derechos reservados.<a href="/sobreNosotros"> Sobre Nosotros </a></li></p>
      
       </div>
-
+     
+      <div class="container">
+        <p class="pull-left copyright"> <a href="/productos">VISTA DE ADMINISTRADOR</a></li></p>
+   
+    </div>
   <!--/.footer-bottom--> 
 
 </footer>
