--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
                                 <div class="logo">
                                     <a href="/"><img src="/stylesheets/img/logo/logo.png" alt=""></a>
                                 </div>
+                                
                             </div>
                             
                             
@@ -45,7 +46,7 @@
                                                         <li><a href="/productos/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/productos/bañeras">Bañeras y Duchas</a></li>
                                                         <li><a href="/productos/accesorios">Accesorios varios</a></li>
-                                                        <li><a href="/productos">vista Admin</a></li>
+                                                        <li><a href="/productos/todos">Ver todos los productos</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -62,14 +63,16 @@
                                                     </li>
                                                     <!-- Search Box -->                            
                                                     <li class="search-switch">
-                                                       <a><i class="fas fa-search" > </i></a></li>
+                                                       <a>      
+                                                        <form action="/productos/search" method="get" class="search-form">
+                                                            <input type="text" name="search" placeholder="Ingresa busqueda" class="search-form_input">
+                                                            <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
+                                                        </form>
+                                                    </a></li>
                                                
                                                    </li> 
                                                 
-                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
-                                              
+                                                   
 
                                                 
                                                 
