--- a/views/todosLosProductos.ejs
+++ b/views/todosLosProductos.ejs
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="ES">
 <head><title>WASSER/Productos</title>
@@ -14,7 +13,7 @@
 
   <main>
     <br>
-    <h1>Listado de productos <br> Vista administrador </h1>
+    <h1>Todos Nuestros Productos</h1>
     <br>
     <div class="container">    
       <div class="row">
@@ -25,13 +24,7 @@
               <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.price %> </div>
               <div class="d-flex justify-content-center">
-              <form action="/productos/EditarProducto/<%= producto.id %>"  method="">
-              <button class="">Editar</button> 
-              </form>
-              <br>
-              <form onclick="return confirm('Estas seguro que querés eliminaro el prodcuto?')" action="/productos/delete/<%= producto.id %>?_method=delete" method="POST">
-              <button class="">Eliminar</button>
-              </form>
+            
               </div>    
               <div class="panel-footer">
                 .
@@ -41,9 +34,7 @@
               <% }) %>
               </div>
               </div>  
-              <div class="container">
-              <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
-              </div>    
+                
   </main>           
   <footer>
         <%- include('./partials/footer') %>
