actualize las vistas de login y  register

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,10 +30,10 @@
                                             
                                             <ul id="navigation">    
                                                                                                                                      
-                                                 <li><a href="/iniciarsesion">Cuenta</a>
+                                                 <li><a href="#">Cuenta</a>
                                                     <ul class="submenu">
-                                                        <li><a href="/registro">Registrarse</a></li>
-                                                        <li><a href="/iniciarsesion">Ingresar</a></li>
+                                                        <li><a href="/user/registrarse">Registrarse</a></li>
+                                                        <li><a href="/user/iniciarsesion">Ingresar</a></li>
                                                     </ul>
                                                 </li>
                                                
