--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="ES">
 <head>   
     <title>WASSER/Sign in</title>
     <%- include('./partials/head') %>     
