register validator ya hecho!

--- a/public/stylesheets/css/registro.css
+++ b/public/stylesheets/css/registro.css
@@ -56,7 +56,7 @@
   }
   
   
-  .form-register2 .botons {
+  .form-register2 .botons2 {
      width: 100%;
      background: #406d96;
      border: none;
