--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -13,80 +13,71 @@
 </header>
 
 <main>
-  <div class="">
-    <form action="" method="POST" enctype="multipart/form-data">
+  
+  <form action="/user/registrarse" method="POST">
+  <section class="form-register2">
+    <h4>Formulario Registro</h4>
+        
+    <div>
+      <label for="nombre"></label>
+      <input type="text"
+      class="controlls2 <%= (typeof old != 'undefined' && old.nombre)?"is-valid":(typeof errors != 'undefined' && errors.nombre)?"is-invalid": ""  %>"
+      id="nombre"  name="nombre"  value="<%= (typeof old != 'undefined' && old.nombre)?old.nombre:'' %>" placeholder="nombre"/>
+      <small class="text-danger"><%= (typeof errors != 'undefined' && errors.nombre)?errors.nombre.msg: "" %> </small>
+    </div>
+        
+    <div>
+      <label for="apellido"></label>
+      <input type="text"
+      class="controlls2 <%= (typeof old != 'undefined' && old.apellido)?"is-valid":(typeof errors != 'undefined' && errors.apellido)?"is-invalid": ""  %>"
+      id="apellido" value="<%= (typeof old != 'undefined' && old.apellido)?old.apellido:'' %>" placeholder="apellido" name="apellido"/>
+      <small class="text-danger"><%= (typeof errors != 'undefined' && errors.apellido)?errors.apellido.msg: "" %> </small>
+    </div>
 
-      <div class="form-row">
-
-        <div class="form-group col-12 col-xl-6">
-          <label for="nombre"></label>
-          <input type="text"
-          class="form-control <%= (typeof old != 'undefined' && old.nombre)?"is-valid":(typeof errors != 'undefined' && errors.nombre)?"is-invalid": ""  %>"
-          id="nombre"  name="nombre"  value="<%= (typeof old != 'undefined' && old.nombre)?old.nombre:'' %>" placeholder="nombre"/>
-          <small class="text-danger"><%= (typeof errors != 'undefined' && errors.nombre)?errors.nombre.msg: "" %> </small>
-        </div>
-
-        <div class="form-group col-12 col-xl-6">
-          <label for="apellido"></label>
-          <input type="text"
-          class="form-control <%= (typeof old != 'undefined' && old.apellido)?"is-valid":(typeof errors != 'undefined' && errors.apellido)?"is-invalid": ""  %>"
-          id="apellido" value="<%= (typeof old != 'undefined' && old.apellido)?old.apellido:'' %>" placeholder="apellido" name="apellido"/>
-          <small class="text-danger"><%= (typeof errors != 'undefined' && errors.apellido)?errors.apellido.msg: "" %> </small>
-        </div>
-
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-12 col-xl-6">
-          <label for="pass"></label>
-          <input type="password"
-          class="form-control <%= (typeof errors != 'undefined' && errors.pass)?"is-invalid": ""  %>"
-          id="pass" placeholder="contraseña" name="pass"/>
-          <small class="text-danger"><%= (typeof errors != 'undefined' && errors.pass)?errors.pass.msg: "" %> </small>
-        </div>
-
-        <div class="form-group col-12 col-xl-6">
-          <label for="pass2"></label>
-          <input type="password"
-          class="form-control <%= (typeof errors != 'undefined' && errors.pass2)?"is-invalid": ""  %>"
-          id="pass2" placeholder="reingresar contraseña" name="pass2"/>
-          <small class="text-danger"><%= (typeof errors != 'undefined' && errors.pass2)?errors.pass2.msg: "" %> </small>
-
-        </div>
-
-      </div>
-      <div class="form-row">
-        <div class="form-group col-12 col-xl-6">
-          <label for="email"></label>
-          <input type="email"
-          class="form-control <%= (typeof old != 'undefined' && old.email && !errors.email)?"is-valid":(typeof errors != 'undefined' && errors.email)?"is-invalid": ""  %>"
-          id="email" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="email" name="email"/>
-          <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
-        </div>
-
+    <div>
+      <label for="email"></label>
+      <input type="email"
+      class="controlls2 <%= (typeof old != 'undefined' && old.email && !errors.email)?"is-valid":(typeof errors != 'undefined' && errors.email)?"is-invalid": ""  %>"
+      id="email" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="email" name="email"/>
+      <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
+    </div>
+   
       
+    <div>
+      <label for="pass"></label>
+      <input type="password"
+      class="controlls2 <%= (typeof errors != 'undefined' && errors.password)?"is-invalid": ""  %>"
+      id="password" placeholder="contraseña" name="password"/>
+      <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
+    </div>
+ 
+    <div>
+      <label for="pass2"></label>
+      <input type="password"
+      class="controlls2 <%= (typeof errors != 'undefined' && errors.password2)?"is-invalid": ""  %>"
+      id="password2" placeholder="reingresar contraseña" name="password2"/>
+      <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password2)?errors.password2.msg: "" %> </small>
 
+    </div>
+      
+    <div class="col-12 col-lg-6 mt-2">
+      <div class="botons2">
+        <input type="checkbox" class="botons2 <%= (typeof old != 'undefined' && old.bases)?"is-valid":(typeof errors != 'undefined' && errors.bases)?"is-invalid": ""  %>" id="customCheck1" name="bases" required>
+        <label class="" for="customCheck1">acepto las bases y condiciones</label>
+      
+        <small class="text-danger"><%= (typeof errors != 'undefined' && errors.bases)?errors.bases.msg: "" %> </small>
       </div>
-      <div class="form-row">
-        <div class="col-12 col-lg-6 mt-2">
-          <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input <%= (typeof old != 'undefined' && old.bases)?"is-valid":(typeof errors != 'undefined' && errors.bases)?"is-invalid": ""  %>" id="customCheck1" name="bases" required>
-            <label class="custom-control-label" for="customCheck1">acepto las bases y condiciones</label><br>
-            <a href="" class="text-info">ver bases y condiciones</a><br>
-          
-            <small class="text-danger"><%= (typeof errors != 'undefined' && errors.bases)?errors.bases.msg: "" %> </small>
-          </div>
-        </div>
-          <div class="col-12 col-lg-6 mt-2">
-            <button type="submit" class="btn btn-primary">
-              Registrarse
-            </button>
-          </div>
+    </div> 
 
-      </div>
-      </div>
-    </form>
-  </div>
+
+      <div class="botons2">
+        <button type="submit" class="botonregistrar">
+          Registrarse
+        </button>
+      </div>       
+        <p><a href="#">¿Ya tengo cuenta?</a></p>
+  </section>
+</form>
 </main>
 
 <footer>
