retocando un par de cosas

--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -70,7 +70,7 @@
     </div> 
 
 
-      <div class="botons2">
+      <div class="botonregistrarse">
         <button type="submit" class="botonregistrar">
           Registrarse
         </button>
