--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -63,8 +63,7 @@
     <div class="col-12 col-lg-6 mt-2">
       <div class="botons2">
         <input type="checkbox" class="botons2 <%= (typeof old != 'undefined' && old.bases)?"is-valid":(typeof errors != 'undefined' && errors.bases)?"is-invalid": ""  %>" id="customCheck1" name="bases" required>
-        <label class="" for="customCheck1">acepto las bases y condiciones</label>
-      
+        <label class="" for="customCheck1">Acepto las bases y condiciones</label>
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.bases)?errors.bases.msg: "" %> </small>
       </div>
     </div> 
