agregue listado de usuarios en nueva vista y acomode el link de agregar producto

--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -14,6 +14,11 @@
 
   <main>
     <br>
+    <div class="container">
+      <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
+      <p class="pull-left copyright backgroun"> <a href="/user/usuarios">Lista de usuarios</a></li></p>
+     
+      </div> 
     <h1>Listado de productos <br> Vista administrador </h1>
     <br>
     <div class="container">    
@@ -42,7 +47,7 @@
               </div>
               </div>  
               <div class="container">
-              <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
+              <p class="pull-left copyright backgroun"> </li></p>
               </div>    
   </main>           
   <footer>
