--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -60,8 +60,8 @@
 
     </div>
       
-    <div class="col-12 col-lg-6 mt-2">
-      <div class="botons2">
+    <div class="col-12 col-lg-12 mt-12">
+      <div class="controlls2">
         <input type="checkbox" class="botons2 <%= (typeof old != 'undefined' && old.bases)?"is-valid":(typeof errors != 'undefined' && errors.bases)?"is-invalid": ""  %>" id="customCheck1" name="bases" required>
         <label class="" for="customCheck1">acepto las bases y condiciones</label>
       
@@ -70,7 +70,7 @@
     </div> 
 
 
-      <div class="botons2">
+      <div class="control">
         <button type="submit" class="botonregistrar">
           Registrarse
         </button>
