--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -14,15 +14,15 @@
 
 <main>
   
-  <form action="/user/registrarse" method="POST">
+  <form action="/user/registrarse" method="POST" enctype="multipart/form-data">
   <section class="form-register2">
-    <h4>Formulario Registro</h4>
+    <h4>Formulario de registro</h4>
         
     <div>
       <label for="nombre"></label>
       <input type="text"
       class="controlls2 <%= (typeof old != 'undefined' && old.nombre)?"is-valid":(typeof errors != 'undefined' && errors.nombre)?"is-invalid": ""  %>"
-      id="nombre"  name="nombre"  value="<%= (typeof old != 'undefined' && old.nombre)?old.nombre:'' %>" placeholder="nombre"/>
+      id="nombre"  name="nombre"  value="<%= (typeof old != 'undefined' && old.nombre)?old.nombre:'' %>" placeholder="Nombre"/>
       <small class="text-danger"><%= (typeof errors != 'undefined' && errors.nombre)?errors.nombre.msg: "" %> </small>
     </div>
         
@@ -30,7 +30,7 @@
       <label for="apellido"></label>
       <input type="text"
       class="controlls2 <%= (typeof old != 'undefined' && old.apellido)?"is-valid":(typeof errors != 'undefined' && errors.apellido)?"is-invalid": ""  %>"
-      id="apellido" value="<%= (typeof old != 'undefined' && old.apellido)?old.apellido:'' %>" placeholder="apellido" name="apellido"/>
+      id="apellido" value="<%= (typeof old != 'undefined' && old.apellido)?old.apellido:'' %>" placeholder="Apellido" name="apellido"/>
       <small class="text-danger"><%= (typeof errors != 'undefined' && errors.apellido)?errors.apellido.msg: "" %> </small>
     </div>
 
@@ -38,7 +38,7 @@
       <label for="email"></label>
       <input type="email"
       class="controlls2 <%= (typeof old != 'undefined' && old.email && !errors.email)?"is-valid":(typeof errors != 'undefined' && errors.email)?"is-invalid": ""  %>"
-      id="email" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="email" name="email"/>
+      id="email" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Email" name="email"/>
       <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
     </div>
    
@@ -47,7 +47,7 @@
       <label for="pass"></label>
       <input type="password"
       class="controlls2 <%= (typeof errors != 'undefined' && errors.password)?"is-invalid": ""  %>"
-      id="password" placeholder="contraseña" name="password"/>
+      id="password" placeholder="Contraseña" name="password"/>
       <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
     </div>
  
@@ -55,11 +55,18 @@
       <label for="pass2"></label>
       <input type="password"
       class="controlls2 <%= (typeof errors != 'undefined' && errors.password2)?"is-invalid": ""  %>"
-      id="password2" placeholder="reingresar contraseña" name="password2"/>
+      id="password2" placeholder="Reingresar contraseña" name="password2"/>
       <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password2)?errors.password2.msg: "" %> </small>
 
+      <div class="form-group col-12 ">
+        <div class="custom-file mt-4">
+          <input type="file" class="custom-file-input" id="customFileLang" lang="es" name="avatar">
+          <label class="custom-file-label" for="customFileLang">Seleccionar Avatar</label>
+          <small class="text-danger"><%= (typeof errorFormato != 'undefined')?errorFormato: "" %></small>
+        </div>
+      </div>
+
     </div>
-      
     <div class="col-12 col-lg-12 mt-12">
       <div class="controlls2">
         <input type="checkbox" class="botons2 <%= (typeof old != 'undefined' && old.bases)?"is-valid":(typeof errors != 'undefined' && errors.bases)?"is-invalid": ""  %>" id="customCheck1" name="bases" required>
@@ -67,7 +74,7 @@
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.bases)?errors.bases.msg: "" %> </small>
       </div>
     </div> 
-
+    
 
       <div class="control">
         <button type="submit" class="botonregistrar">
