--- a/views/iniciarsesion.ejs
+++ b/views/iniciarsesion.ejs
@@ -32,7 +32,7 @@
 
         <section class="form-register">
             
-           <input class="botons" type="submit" value="Iniciar Sesión">
+           <input href="/" class="botons" type="submit" value="Iniciar Sesión">
              <p><a href="/recuperar">Olvide mi contraseñá</a></p>
         
             </form>
