--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -77,7 +77,7 @@
     
 
       <div class="control">
-        <button type="submit" class="botonregistrar">
+        <button href="/user/iniciarsesion" type="submit" class="botonregistrar">
           Registrarse
         </button>
       </div>       
