agregue una View y los controllers respectivos, mañana termino todo ya

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -38,7 +38,7 @@
                 <td><%- usuario.email %></td>
                 
                 
-                <td><form onclick="return confirm('Estas seguro que querés eliminaro el prodcuto?')" action="/user/delete/<%= usuario.id %>?_method=delete" method="POST">
+                <td><form onclick="return confirm('Estas seguro que querés eliminaro el producto?')" action="/user/delete/<%= usuario.id %>?_method=delete" method="POST">
                     <button class="">Eliminar</button>
                     </form></td>    
             </tr>
