ya esta enlazada la base de datos de USUARIOS y se pueden ver y eliminar

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -30,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            <% productos.forEach(usuario => { %>    
+            <% usuarios.forEach(usuario => { %>    
             <tr>
                 
                 <td><%- usuario.nombre %> </td>
