solo resta hacer funcionar la vista de Productos

--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html class="no-js" lang="ES">
-<head><title>WASSER/Productos</title>
+<head><title>administrador/Productos</title>
   <%- include('./partials/head') %>     
 </head>    
 
