--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ES">
 <head> 
-    <title>WASSER/publica!</title>
+    <title>¡publica!</title>
     <%- include('./partials/head') %> 
 </head>
   
@@ -18,14 +18,14 @@
         
           <form method="POST" action="" enctype="multipart/form-data">
           
-        <input class="controlls2" type="" name="name" id="name" placeholder="Nombre producto" required>
+        <input class="controlls2" type="" name="nombre" id="nombre" placeholder="nombre" required>
 
-        <input class="controlls2" type="" name="color" id="color" placeholder="Color" required>  
+        <input class="controlls2" type="" name="color" id="color" placeholder="color" required>  
         
-        <input class="controlls2" type="" name="price" id="price" placeholder="$ Precio" required>      
+        <input class="controlls2" type="" name="precio" id= precio placeholder="$ precio" required>      
         
         <label for="Categorias"></label>
-            <select name="category" class="controlls2">
+            <select name="categories" class="controlls2">
                 <option selected>Selecciona una Categoria</option>
                 <option value="baño">Griferia Baño</option>
                 <option value="cocina">Griferia Cocina</option>
@@ -35,7 +35,7 @@
                 <option value="accesorios">Accesorios Varios</option> 
         </select>
         <h3>Agregue 1 imagen</h3>
-        <input class="controlls2"  type="file" name="image">
+        <input class="controlls2"  type="file" name="imagen">
 
       </label>
         <label for="controlls2"></label>    
