vistas agregadas con la base correcta, solo falta editar el producto y eliminar, el resto ok

--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -35,7 +35,7 @@
                 <option value="accesorios">Accesorios Varios</option> 
         </select>
         <h3>Agregue 1 imagen</h3>
-        <input class="controlls2"  type="file" name="imagen">
+        <input class="controlls2"  type="file" name="imagenes">
 
       </label>
         <label for="controlls2"></label>    
