--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -26,15 +26,15 @@
         <% productos.forEach(producto => { %>            
           <div class="col-sm-3">
             <div class="panel panel-primary">
-              <div class="panel-heading"><%- producto.name %>  </div>
-              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
-              <div class="panel-footer">$<%- producto.price %> </div>
+              <div class="panel-heading"><%- producto.nombre %>  </div>
+              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$<%- producto.precio %> </div>
               <div class="d-flex justify-content-center">
               <form action="/productos/EditarProducto/<%= producto.id %>"  method="">
               <button class="">Editar</button> 
               </form>
               <br>
-              <form onclick="return confirm('Estas seguro que querés eliminaro el prodcuto?')" action="/productos/delete/<%= producto.id %>?_method=delete" method="POST">
+              <form onclick="return confirm('Estas seguro que querés eliminaro el producto?')" action="/productos/delete/<%= producto.id %>?_method=delete" method="POST">
               <button class="">Eliminar</button>
               </form>
               </div>    
