--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,10 +46,10 @@
                                                         <li><a href="/productos/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/productos/bañeras">Bañeras y Duchas</a></li>
                                                         <li><a href="/productos/accesorios">Accesorios varios</a></li>
-                                                        <% if (typeof user == "admin") { %>
-                                                            <li class="nav-item"><a href="/productos" href="#">PRODUCTOS  / ADMIN</a></li>
+                                                        <% if (typeof user == "undefined") { %>
+                                                            <li class="nav-item"><a href="/productos/todos" href="#">PRODUCTOS t</a></li>
                                                           <% }else{ %>
-                                                            <li class="nav-item"><a href="/productos/todos" href="#">PRODUCTOS</a></li>
+                                                            <li class="nav-item"><a href="/productos" href="#">PRODUCTOS ADMIN</a></li>
                                                           <% } %>
                                                     </ul>
                                                 </li>
