--- a/views/todosLosProductos.ejs
+++ b/views/todosLosProductos.ejs
@@ -20,10 +20,11 @@
         <% productos.forEach(producto => { %>            
           <div class="col-sm-3">
             <div class="panel panel-primary">
-              <div class="panel-heading"><%- producto.name %>  </div>
-              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
-              <div class="panel-footer">$<%- producto.price %> </div>
+              <div class="panel-heading"><%- producto.nombre %>  </div>
+              <div class="panel-body"><a href="/productos/<%= producto.id_categoria %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$<%- producto.precio %> </div>
               <div class="d-flex justify-content-center">
+                
             
               </div>    
               <div class="panel-footer">
