--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,8 +32,14 @@
                                                                                                                                      
                                                  <li><a href="#">Cuenta</a>
                                                     <ul class="submenu">
+                                                        <% if (typeof user == "undefined") { %>
                                                         <li><a href="/user/registrarse">Registrarse</a></li>
                                                         <li><a href="/user/iniciarsesion">Ingresar</a></li>
+                                                        <% }else{ %>
+                                                        <li>usuario:<%= (user)?user.nick:"" %></li>   
+                                                        <li><a href="/user/usuarios/ ">Mi Perfil</a></li>
+                                                        <li><a href="/user/cerrarsesion">Cerrar Sesion</a></li>                                                    
+                                                        <% } %>
                                                     </ul>
                                                 </li>
                                                
@@ -46,10 +52,18 @@
                                                         <li><a href="/productos/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/productos/bañeras">Bañeras y Duchas</a></li>
                                                         <li><a href="/productos/accesorios">Accesorios varios</a></li>
+                                                        
                                                         <% if (typeof user == "undefined") { %>
-                                                            <li class="nav-item"><a href="/productos/todos" href="#">PRODUCTOS t</a></li>
-                                                          <% }else{ %>
-                                                            <li class="nav-item"><a href="/productos" href="#">PRODUCTOS ADMIN</a></li>
+                                                            <li class="nav-item"><a href="/productos/todos" href="#">Productos</a></li>
+                                                                                                                 
+                                                        <% }else{ %>
+                                                                <% if (user.rol != "admin") { %>
+                                                                    <li class="nav-item"><a href="/productos/todos" href="#">Productos todos</a></li>
+                                                                    <% }else{ %>
+
+                                                            <li class="nav-item"><a href="/productos" href="#">Productos admin</a></li>
+                                                            <% } %>
+                                                            
                                                           <% } %>
                                                     </ul>
                                                 </li>
