--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
                                                         <li><a href="/user/registrarse">Registrarse</a></li>
                                                         <li><a href="/user/iniciarsesion">Ingresar</a></li>
                                                         <% }else{ %>
-                                                        <li>usuario:<%= (user)?user.nick:"" %></li>   
+                                                        <li>Hola <%= (user)?user.nick:"." %></li>   
                                                         <li><a href="/user/usuarios/ ">Mi Perfil</a></li>
                                                         <li><a href="/user/cerrarsesion">Cerrar Sesion</a></li>                                                    
                                                         <% } %>
