--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -27,7 +27,7 @@
           <div class="col-sm-3">
             <div class="panel panel-primary">
               <div class="panel-heading"><%- producto.nombre %>  </div>
-              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-body"><a href="/productos/detalle/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.precio %> </div>
               <div class="d-flex justify-content-center">
               <form action="/productos/EditarProducto/<%= producto.id %>"  method="">
