--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -23,28 +23,29 @@
   
   <div class="container">    
     <div class="row">
-      <% producto.forEach(producto => { %>
+     
+
         <div class="col-lg-1">
         </div>
       <div class="col-lg-4">
         
-        <img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a>
+        <img src="/images/imagenProducto/<%=producto.imagenes%>" class="img-responsive" style="width:100%" alt="Imagenes"></a>
             
         </div>
         <div class="col-lg-1">
         </div>
           <!-- /.col-lg-8 -->
           <div class="col-lg-6">
-            <h1 class="font-weight-light"><%- producto.name %></h1>
-            <h2>$<%- producto.price %></h2>
-            <label for="cantidad"><b>Color: </b></label>
+            <h1 class="font-weight-light"><%- producto.nombre %></h1>
+            <h2>$<%- producto.precio %></h2>
+            <!--<label for="cantidad"><b>Color: </b></label>
             <select name="cantidad" id="cantidad">
                 <option value="">Seleccione un color </option>
                 <option value="1"><%- producto.colors %></option>
                 <option value="2"><%- producto.colors2 %></option>
                 <option value="3"><%- producto.colors3 %></option>
-            </select>
-            <p><%- producto.description %></p>
+            </select>-->
+            <p><%- producto.descripcion %></p>
             <label for="cantidad"><b>cantidad: </b></label>
             <select name="cantidad" id="cantidad">
                 <option value="">Seleccione cantidad</option>
@@ -80,11 +81,7 @@
             </div>
           </div>
         </div>
-  <% }) %>
         
-        
-          
-           
 
 
 </main>
@@ -101,23 +98,5 @@
 
 
 
-<!--<div class="container">    
-    <div class="row">
-      <% producto.forEach(producto => { %>            
-        <div class="col-sm-3">
-          <div class="panel panel-primary">
-            <div class="panel-heading"><%- producto.name %>  </div>
-            <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="<%- producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
-            <div class="panel-footer">$<%- producto.price %> </div>
-            <div class="d-flex justify-content-end">
-             
-          </div>    
-            <div class="panel-footer">.</div>
-          </div>
-        </div>
-          <% }) %>
-     </div>
-  </div>     
-      
-      
+<!-- en javascript, no se comenta porque lo toma igual
      -->
