--- a/views/todosLosProductos.ejs
+++ b/views/todosLosProductos.ejs
@@ -21,7 +21,7 @@
           <div class="col-sm-3">
             <div class="panel panel-primary">
               <div class="panel-heading"><%- producto.nombre %>  </div>
-             <div class="panel-body"><a href="/productos/detalle/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+             <div class="panel-body"><a href=""><img src="/images/imagenProducto/<%=producto.imagenes %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.precio %> </div>
               <div class="d-flex justify-content-center">
                 
