--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -20,8 +20,7 @@
           
         <input class="controlls2" type="" name="nombre" id="nombre" placeholder="nombre" required>
 
-        <input class="controlls2" type="" name="color" id="color" placeholder="color" required>  
-        
+                
         <input class="controlls2" type="" name="precio" id= precio placeholder="$ precio" required>      
         
         <label for="Categorias"></label>
@@ -41,7 +40,7 @@
         <label for="controlls2"></label>    
         <div class="botons">
           <label for="exampleFormControlTextarea1">Descripción</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="descripcion"></textarea>
       </div>
                    
       <div class="mt-5 mr-5 d-flex justify-content-center">
