--- a/views/iniciarsesion.ejs
+++ b/views/iniciarsesion.ejs
@@ -18,15 +18,15 @@
       
       <form action="" method="POST"> 
 
-        <a href:""> <h4>Iniciar Sesión</h4></a>
+        <a > <h4>Iniciar Sesión</h4></a>
         <input class="controlls2" type="email" name="email" id="email" aria-describedby="emailHelp" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Ingrese su Correo" >
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
         <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña" required>   
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
 
         <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar">
-          <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar"><span></span>
+                    <label class="form-check-label" for="exampleCheck1" style="margin-top: 10px;">Recordarme</label>
         </div>
 
 
