--- a/views/iniciarsesion.ejs
+++ b/views/iniciarsesion.ejs
@@ -15,14 +15,15 @@
     <main>
     
     <article class="form-register2">
-      
-      <form action="" method="POST"> 
-
+     
+      <form action="" method="POST" id="loginForm"> 
+         <!--lo agrega pio para mostrar los errores del front validation-->
         <a > <h4>Iniciar Sesión</h4></a>
+        <div id= "errors"></div>
         <input class="controlls2" type="email" name="email" id="email" aria-describedby="emailHelp" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Ingrese su Correo" >
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
         <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña" required>   
-        <small class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
+        <!--<small class="text-danger"><%= //(typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>-->
 
         <div class="form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1" name="recordar"><span></span>
