--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -2,34 +2,38 @@
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
 </div>
 
-<!-- JS here -->
+<!-- JS here 
 
-<script src="/stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
+<script src="/stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>-->
+
 <!-- Jquery, Popper, Bootstrap -->
 <script src="/stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
 <script src="/stylesheets/js/popper.min.js"></script>
 <script src="/stylesheets/js/bootstrap.min.js"></script>
-<!-- Jquery Mobile Menu -->
+<!-- Jquery Menu tamaño movil -->
 <script src="/stylesheets/js/jquery.slicknav.min.js"></script>
 
-<!-- Jquery Slick , Owl-Carousel Plugins -->
-<script src="/stylesheets/js/owl.carousel.min.js"></script>
+<!-- carrusel del home -->
+
 <script src="/stylesheets/js/slick.min.js"></script>
-<!-- One Page, Animated-HeadLin -->
+<!-- One Page, Animated-HeadLin 
 <script src="/stylesheets/js/wow.min.js"></script>
 <script src="/stylesheets/js/animated.headline.js"></script>
-<script src="/stylesheets/js/jquery.magnific-popup.js"></script>
+<script src="/stylesheets/js/jquery.magnific-popup.js"></script>-->
 
 
 
-<!-- counter , waypoint,Hover Direction -->
+<!-- counter , waypoint,Hover Direction 
 <script src="/stylesheets/js/jquery.counterup.min.js"></script>
 <script src="/stylesheets/js/waypoints.min.js"></script>
 <script src="/stylesheets/js/jquery.countdown.min.js"></script>
 <script src="/stylesheets/js/hover-direction-snake.min.js"></script>
+-->
 
 
-
-<!-- Jquery Plugins, main Jquery -->	
+<!-- Jquery Plugins, main Jquery	 -->
 <script src="/stylesheets/js/plugins.js"></script>
 <script src="/stylesheets/js/main.js"></script>
+
+<!-- JS VALIDACIONES EN FRONT -->
+<script src="/javascript/userProfile.js"></script>
