--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -15,8 +15,8 @@
        
     <div class="form-register2">
         <h4>Carga tu producto</h4>
-        
-          <form method="POST" action="" enctype="multipart/form-data">
+        <div id= "errors"></div>  <!--lo agrega pio para mostrar los errores del front validation-->
+          <form id="formAdd" method="POST" action="" enctype="multipart/form-data">
           
         <input class="controlls2" type="" name="nombre" id="nombre" placeholder="nombre" required>
 
@@ -34,13 +34,13 @@
                 <option value="accesorios">Accesorios Varios</option> 
         </select>
         <h3>Agregue 1 imagen</h3>
-        <input class="controlls2"  type="file" name="imagenes">
+        <input class="controlls2"  type="file" id="imagen" name="imagenes">
 
       </label>
         <label for="controlls2"></label>    
         <div class="botons">
           <label for="exampleFormControlTextarea1">Descripción</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="descripcion"></textarea>
+          <textarea class="form-control" id="descripcion" rows="3" name="descripcion"></textarea>
       </div>
                    
       <div class="mt-5 mr-5 d-flex justify-content-center">
