login terminado, faltar user y addprod

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -14,7 +14,7 @@
 
 <main>
   
-  <form id='formRegister' action="/user/registrarse" method="POST" enctype="multipart/form-data">
+  <form id="formRegister" action="/user/registrarse" method="POST" enctype="multipart/form-data">
   <section class="form-register2">
     <h4>Formulario de registro</h4>
     <div id= "errors"></div> <!--Para mostrar los errores de validacion del front-->
