login de prueba

--- a/src/views/iniciarsesion.ejs
+++ b/src/views/iniciarsesion.ejs
@@ -23,7 +23,7 @@
       <form id="loginForm" action="" method="POST" > 
         <input class="controlls2" type="email" name="email" id="email" aria-describedby="emailHelp" value="<%= (typeof old != 'undefined' && old.email)?old.email:'' %>" placeholder="Ingrese su Correo" >
         <small class="text-danger"><%= (typeof errors != 'undefined' && errors.email)?errors.email.msg: "" %> </small>
-        <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña" required>   
+        <input class="controlls2" type="password" name="password" id="password" placeholder="Ingrese su Contraseña">   
         <small class="text-danger"><%= //(typeof errors != 'undefined' && errors.password)?errors.password.msg: "" %> </small>
 
         <div class="form-group form-check">
@@ -33,8 +33,9 @@
 
 
         <section class="form-register">
+          <button type="submit">enviar emi</button>
             
-           <input href="/" class="botons" type="submit" value="Iniciar Sesión">
+          <!--  <input  class="botons" type="submit" value="Iniciar Sesión"> -->
              <p><a href="/recuperar">Olvide mi contraseñá</a></p>
         
             </form>
@@ -45,7 +46,8 @@
 
     <footer>
         <%- include('./partials/footer') %>
-    </footer>           
+    </footer>  
+           
         <%- include('./partials/scripts') %>  
     </body>
     </html>
