userRegister ya casi terminado, estan los comentarios que explican lo que hice

--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -39,4 +39,4 @@
 <script src="/javascript/userLogin.js"></script>
 <script src="/javascript/userRegister.js"></script>
 <script src="/javascript/productAdd.js"></script>
-<script src="/javascript/aaa.js"></script>  
+<script src="/javascript/use.js"></script>  
