--- a/src/views/iniciarsesion.ejs
+++ b/src/views/iniciarsesion.ejs
@@ -15,9 +15,6 @@
     <main>
     
     <article class="form-register2">
-      
- 
-        
         <a > <h4>Iniciar Sesión</h4></a>
             <div id= "errors"></div>  <!--lo agrega pio para mostrar los errores del front validation-->
       <form id="loginForm" action="" method="POST" > 
@@ -33,7 +30,7 @@
 
 
         <section class="form-register">
-          <button type="submit">enviar emi</button>
+          <button type="submit">enviar</button>
             
           <!--  <input  class="botons" type="submit" value="Iniciar Sesión"> -->
              <p><a href="/recuperar">Olvide mi contraseñá</a></p>
